--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,17 @@ jobs:
       - name: Run yamllint
         uses: karancode/yamllint-github-action@master
         with:
-          yamllint_file_or_dir: 'ansible/roles/loki'
           yamllint_strict: false
           yamllint_comment: false
-          yamllint_config_filepath: 'ansible/roles/loki/.yamlint'
+          yamllint_config_filepath: '.yamlint'
 
       - name: Run ansible-lint
         uses: ansible/ansible-lint-action@master
         with:
-          targets: ansible/roles/loki/
+          targets: |
+            defaults/*
+            tasks/*
           override-deps: ansible-lint==5.3.2     #https://github.com/ansible-community/ansible-lint/issues/1795
-          args: "--exclude ansible/roles/loki/molecule/"
 
   test:
     name: molecule
