--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           yamllint_strict: false
           yamllint_comment: false
-          yamllint_config_filepath: '.yamlint'
+          yamllint_config_filepath: '.yamllint'
 
       - name: Run ansible-lint
         uses: ansible/ansible-lint-action@master
