--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -17,7 +17,5 @@ loki_http_listen_port: 3100
 loki_grpc_port: 0
 promtail_hostname: "promatil"
 scrape_jobs: [
-  {'job_name':'{{ promtail_hostname }}-systemd-journal','label':'journal','path':'/var/log/journal'},
-  {'job_name':'{{ promatil_hostname }}apache','path':'/var/log/apache2/*','label':'apache'},
-  ]
-
+  {'job_name':'{{ promtail_hostname }}-systemd-journal', 'label':'journal', 'path':'/var/log/journal'},
+  {'job_name':'{{ promatil_hostname }}apache', 'path':'/var/log/apache2/*', 'label':'apache'}]
