--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -23,7 +23,7 @@
         validate_certs: false
         user: "{{ lookup('env', 'GH_USER') | default(omit) }}"
         password: "{{ lookup('env', 'GH_TOKEN') | default(omit) }}"
-      no_log: true
+      no_log: false
       register: _latest_release
       until: _latest_release.status == 200
       retries: 5
@@ -32,5 +32,5 @@
       set_fact:
         promtail_version: "{{ _latest_release.json.tag_name[1:] }}"
   when: promtail_version == "latest"
-  delegate_to: localhost
-  run_once: true
+  # delegate_to: localhost
+  # run_once: true
