--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -52,7 +52,6 @@
   unarchive:
     src: "/tmp/promtail-linux-{{ go_arch }}.zip"
     dest: "/tmp"
-    creates: "/tmp/promtail-linux-{{ go_arch }}/promtail"
     remote_src: true
 
 - name: Create /usr/local/bin
@@ -63,7 +62,7 @@
 
 - name: Propagate promtail binaries
   copy:
-    src: "/tmp/promtail-linux-{{ go_arch }}/promtail"
+    src: "/tmp/promtail-linux-{{ go_arch }}"
     dest: "/usr/local/bin/promtail"
     mode: 0755
     owner: root
