--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -19,3 +19,6 @@ loki_grpc_port: 0
 promtail_hostname: "promtail-client"
 scrape_jobs: [
   {'job_name':'miarec_speech', 'label':'{{ promtail_hostname }}-miarec_specch', 'path':'/var/log/miarec_speech/*'}]
+
+aws_install: false
+aws_region: us-west-2
