--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ loki_http_listen_port: 3100
 loki_grpc_port: 0
 promtail_hostname: "promtail-client"
 scrape_jobs: [
-  {'job_name':'miarec_speech', 'label':'{{ promtail_hostname }}-miarec_specch', 'path':'/var/log/miarec_speech/*'}]
+  {'job_name':'miarec_speech', 'path':'/var/log/miarec_speech/*'}]
 
 aws_install: false
 aws_region: us-west-2
