--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,10 @@ jobs:
       - name: Run ansible-lint
         uses: ansible/ansible-lint-action@main
         with:
-          targets: |
-            defaults/*
-            tasks/*
-          override-deps: ansible-lint==5.3.2     # https://github.com/ansible-community/ansible-lint/issues/1795
+          # targets: |
+          #   defaults/*
+          #   tasks/*
+          # override-deps: ansible-lint==5.3.2     # https://github.com/ansible-community/ansible-lint/issues/1795
 
   test:
     name: molecule
