testing ci.yml ansible-lint

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
           yamllint_comment: false
           yamllint_config_filepath: '.yamllint'
 
-      - name: Run ansible-lint
-        uses: ansible/ansible-lint-action@main
+      # - name: Run ansible-lint
+      #   uses: ansible/ansible-lint-action@main
         # with:
           # targets: |
           #   defaults/*
