--- a/vars/main.yml
+++ b/vars/main.yml
@@ -15,4 +15,4 @@ promtail_dependencies:
 promtail_system_user: "promtail"
 promtail_system_group: "{{ promtail_system_user }}"
 promtail_user_optional_groups:
- - "adm"
+  - adm
