--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,16 +2,25 @@
 # promtail install variables
 promtail_http_listen_port: 9080
 promtail_grpc_listen_port: 0
+
+promtail_log_dir: "var/log/promtail"
 promtail_config_dir: "/etc/promtail"
+promtail_local_storage_dir: "/etc/promtail"
+promtail_bin_dir: "/usr/local/bin"
+
+promtail_directories:
+ - {{ promtail_config_dir }}
+ - {{ promtail_log_dir }}
+ - {{ promtail_local_storage_dir }}
+
 promtail_config_file: "promtail-config.yml"
 promtail_env_file: "promtail-env"
-promtail_bin_dir: "/usr/local/bin"
 promtail_bin: "promtail"
-promtail_local_storage_dir: "etc/promtail"
+promtail_positions_file: "positions.yml"
+
 
 # promtail behavior vars, this defines how promtail interacts with Loki
 
-# promtail batch settings,  promtail will
 # Maximum amount of time to wait before sending a batch, even if that
 # batch isn't full.
 promtail_batchwait: "1s"
@@ -46,7 +55,7 @@ promtail_readline_burst: 10000
 # When true, exceeding the rate limit causes this instance of Promtail to discard
 # log lines, rather than sending them to Loki. When false, exceeding the rate limit
 # causes this instance of Promtail to temporarily hold off on sending the log lines and retry later.
-readline_rate_drop: false
+promtail_readline_rate_drop: false
 
 
 # promtail config variables
