--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,7 +3,7 @@
 promtail_http_listen_port: 9080
 promtail_grpc_listen_port: 0
 
-promtail_log_dir: "var/log/promtail"
+promtail_log_dir: "/var/log/promtail"
 promtail_config_dir: "/etc/promtail"
 promtail_local_storage_dir: "/etc/promtail"
 promtail_bin_dir: "/usr/local/bin"
