--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,5 +21,22 @@ promtail_hostname: "promtail-client"
 scrape_jobs: [
   {'job_name':'miarec_speech', 'path':'/var/log/miarec_speech/*'}]
 
-aws_install: false
-aws_region: us-west-2
+promtail_aws_install: false
+# promtail_aws_region: us-west-2  <<< i dont think i need this, this was from ec2_sd which i am not using now
+
+# these will be inserted into environment file
+promtail_custom_environment_variables:
+
+# these will be added to each job
+promtail_custom_labels:
+  - "instance: ${EC2_INSTANCE}"
+  - "name: ${EC2_TAG_NAME}"
+  - "role: ${EC2_TAG_ROLE}"
+
+
+
+#         echo "SYSTEMD_LOG_LEVEL=debug" > /etc/promtail/promtail-env
+#         echo "EC2_INSTANCE=$(curl -sL http://169.254.169.254/latest/meta-data/instance-id)" >> /etc/promtail/promtail-env
+#         echo "EC2_TAG_NAME=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Name)" >> /etc/promtail/promtail-env
+#         echo "EC2_TAG_ROLE=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Role)" >> /etc/promtail/promtail-env
+#         systemctl restart promtail
