--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -21,17 +21,18 @@ promtail_hostname: "promtail-client"
 scrape_jobs: [
   {'job_name':'miarec_speech', 'path':'/var/log/miarec_speech/*'}]
 
-promtail_aws_install: false
-# promtail_aws_region: us-west-2  <<< i dont think i need this, this was from ec2_sd which i am not using now
-
+# Custom Promtail labels
 # these will be inserted into environment file
 promtail_custom_environment_variables:
+  # - "EXAMPLE_EV=VALUE"
 
 # these will be added to each job
 promtail_custom_labels:
-  - "instance: ${EC2_INSTANCE}"
-  - "name: ${EC2_TAG_NAME}"
-  - "role: ${EC2_TAG_ROLE}"
+  # - label: "${EXAMPLE_EV}"
+  # - hostname: "EXAMPLE_HOSTNAME"
+  # - instance: "${EC2_INSTANCE}"
+  # - name: "${EC2_TAG_NAME}"
+  # - role: "${EC2_TAG_ROLE}"
 
 
 
@@ -40,3 +41,15 @@ promtail_custom_labels:
 #         echo "EC2_TAG_NAME=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Name)" >> /etc/promtail/promtail-env
 #         echo "EC2_TAG_ROLE=$(curl -sL http://169.254.169.254/latest/meta-data/tags/instance/Role)" >> /etc/promtail/promtail-env
 #         systemctl restart promtail
+
+
+
+
+promtail_aws_install: false
+# promtail_aws_region: us-west-2  <<< i dont think i need this, this was from ec2_sd which i am not using now
+
+
+promtail_aws_imdsv1_url: "http://169.254.169.254/latest/meta-data/"
+promtail_aws_imdsv1_data:
+  - EC2_INSTANCE_ID: "instance-id"
+  - EC2_INSTANCE_NAME: "tags/instance/Name"
