--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,10 @@
   tags:
     - promtail_install
 
+- import_tasks: aws_metadata.yml
+  become: true
+  when: promtail_aws_install
+
 - import_tasks: configure.yml
   become: true
   tags:
