--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,7 +18,7 @@ loki_url: "{{ loki_dns_host }}.{{ loki_dns_domain }}"
 loki_http_listen_port: 3100
 loki_grpc_port: 0
 promtail_hostname: "promtail-client"
-scrape_jobs: [
+promtail_scrape_jobs: [
   {'job_name':'miarec_speech', 'path':'/var/log/miarec_speech/*'}]
 
 # Promtail labels
