--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,10 +7,11 @@ platforms:
   - name: instance
     image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest
     command: ${MOLECULE_DOCKER_COMMAND:-""}
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
     # volumes:
-    #   - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    cgroupns_mode: host
     privileged: true
     pre_build_image: true
 
