--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,19 +11,25 @@ promtail_local_storage_dir: "etc/promtail"
 
 # promtail config variables
 
-loki_dns_host: "loki"
-loki_dns_domain: "local.internal"
-loki_url: "{{ loki_dns_host }}.{{ loki_dns_domain }}"
+promtail_loki_url:
+promtail_loki_push_path: "/loki/api/v1/push"
 
-loki_http_listen_port: 3100
-loki_grpc_port: 0
-promtail_hostname: "promtail-client"
+# loki_dns_host: "loki"
+# loki_dns_domain: "local.internal"
+# loki_url: "{{ loki_dns_host }}.{{ loki_dns_domain }}"
+
+# loki_http_listen_port: 3100
+# loki_grpc_port: 0
+
+
+# promtail_hostname: "promtail-client"
 promtail_scrape_jobs: [
   {'job_name':'miarec_speech', 'path':'/var/log/miarec_speech/*'}]
 
 # Promtail labels
 # these will be inserted into environment file
 promtail_custom_environment_variables: []
+  # CUSTOMEV=VALUE
 
 # these lables will be added to all metrics sent to Loki, they can reference environment vars or other metadata
 promtail_external_labels:
@@ -33,5 +39,5 @@ promtail_external_labels:
 # promtail aws settings
 promtail_aws_install: false
 promtail_aws_imdsv1_url: "http://169.254.169.254/latest/meta-data/"
-promtail_aws_imdsv1_data:
-  EC2_INSTANCE_ID: 'instance-id'
+promtail_aws_imdsv1_data: []
+  # EC2_INSTANCE_ID: 'instance-id'
