--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,11 @@ jobs:
   test:
     name: molecule
     needs: lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     strategy:
       matrix:
         distro:
           - centos7
-          - centos8
           - ubuntu1804
           - ubuntu2004
 
