--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,32 +23,32 @@ jobs:
           yamllint_comment: false
           yamllint_config_filepath: '.yamllint'
 
-  test:
-    name: molecule
-    needs: lint
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        distro:
-          - centos7
-          - ubuntu1804
-          - ubuntu2004
+  # test:
+  #   name: molecule
+  #   needs: lint
+  #   runs-on: ubuntu-20.04
+  #   strategy:
+  #     matrix:
+  #       distro:
+  #         - centos7
+  #         - ubuntu1804
+  #         - ubuntu2004
 
-    steps:
-      - name: Check out the Repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Check out the Repository
+  #       uses: actions/checkout@v2
 
-      - name: Set up Python3
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
+  #     - name: Set up Python3
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: '3.x'
 
-      - name: Install test dependencies
-        run: pip3 install -r molecule/default/test-requirements.txt
+  #     - name: Install test dependencies
+  #       run: pip3 install -r molecule/default/test-requirements.txt
 
-      - name: Run molecule tests
-        run: molecule test
-        env:
-          PY_COLORS: '1'
-          ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRO: ${{ matrix.distro }}
+  #     - name: Run molecule tests
+  #       run: molecule test
+  #       env:
+  #         PY_COLORS: '1'
+  #         ANSIBLE_FORCE_COLOR: '1'
+  #         MOLECULE_DISTRO: ${{ matrix.distro }}
