--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,3 +52,33 @@ jobs:
   #         PY_COLORS: '1'
   #         ANSIBLE_FORCE_COLOR: '1'
   #         MOLECULE_DISTRO: ${{ matrix.distro }}
+
+    test:
+    name: molecule
+    needs: lint
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        distro:
+          - centos7
+          - ubuntu2004
+          - ubuntu2204
+
+    steps:
+      - name: Check out the Repository
+        uses: actions/checkout@v2
+
+      - name: Set up Python3
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: Install test dependencies
+        run: pip3 install -r molecule/default/test-requirements.txt
+
+      - name: Run molecule tests
+        run: molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
