--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -13,10 +13,10 @@ platforms:
       - /run
       - /tmp
     # command: ${MOLECULE_DOCKER_COMMAND:-""}
-    # volumes:
-    #   - /sys/fs/cgroup:/sys/fs/cgroup:ro
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+    # volumes:
+    #   - /sys/fs/cgroup:/sys/fs/cgroup:rw
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
