--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,19 +5,9 @@ driver:
   name: docker
 platforms:
   - name: instance
-    # image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest
-    image: quay.io/centos/centos:centos7
-    capabilities:
-      - SYS_ADMIN
-    command: /sbin/init
-    tmpfs:
-      - /run
-      - /tmp
-    # command: ${MOLECULE_DOCKER_COMMAND:-""}
+    image: geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu1804}-ansible:latest
     volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
-    # volumes:
-    #   - /sys/fs/cgroup:/sys/fs/cgroup:rw
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
     cgroupns_mode: host
     privileged: true
     pre_build_image: true
